# PySched

./: .gitignore  LICENSE  README.md  pyproject.toml  pysched.py  template.job  template2.job
cli/: jobs.py
database/: database.py
scheduler/: scheduler.py
validation/: validation.py
